// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Input empty 1`] = `
<input
  className="input"
  onChange={undefined}
  placeholder={undefined}
  style={
    Object {
      "width": undefined,
    }
  }
  value={undefined}
/>
`;

exports[`Input with 'error' class 1`] = `
<input
  className="input error"
  onChange={undefined}
  placeholder={undefined}
  style={
    Object {
      "width": undefined,
    }
  }
  value={undefined}
/>
`;

exports[`Input with with the specified width 1`] = `
<input
  className="input"
  onChange={undefined}
  placeholder={undefined}
  style={
    Object {
      "width": 100,
    }
  }
  value={undefined}
/>
`;
